# aurora-cdc-demo

./: .env.example  .gitignore  COMPARISON.md  Makefile  README.md  git_setup.sh  pyproject.toml  requirements.txt
.cursor/: launch.json  settings.json
.devcontainer/: Dockerfile  devcontainer.json
debezium-approach/: README.md
debezium-approach/config/: aurora-connector.json
debezium-approach/docker/: docker-compose.yml
debezium-approach/notebooks/: dlt_cdc_pipeline.py
debezium-approach/setup/: configure_aurora_connector.sh  deploy_kafka_debezium.sh
debezium-approach/tests/: test_debezium_integration.py
demo/: README.md
demo/setup/: cleanup_demo.sh  demo_setup.sh  resume_setup_manual.sh
infrastructure/cloudformation/: aurora-cluster-demo.yaml  aurora-cluster.yaml  vpc-aurora-demo.yaml  vpc-networking.yaml
infrastructure/cloudformation/parameters/: dev.json  prod.json
infrastructure/scripts/: cleanup.sh  deploy-infrastructure.sh  setup-database.sh
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
notebooks/demo/: unity_catalog_cdc_demo.py
requirements/: cdc-enhanced.txt  demo.txt
scripts/: cdc_data_generator.py  setup_tpch_database.py
src/aurora_cdc/: __init__.py
src/aurora_cdc/config/: table_manager.py
src/aurora_cdc/datasource/: __init__.py  aurora_cdc_datasource_v2.py  aurora_datasource.py  connection_pool.py  connection_pool_v2.py  partition.py  stream_reader.py
src/notebooks/demo/: cdc_500_tables_streaming.py
tests/: test_cdc_integration.py
